# my-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  push_log.txt  pyproject.toml  validate.py
app/: __init__.py  env.py  models.py  server.py
data_eng_env/: Dockerfile  inference.py  openenv.yaml  pyproject.toml
data_eng_env/server/: app.py
server/: app.py
