[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datapipeline-sentry"
version = "2.0.0"
description = "DataPipeline-Sentry: Financial Data Lake Reliability Environment"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "scipy",
]

[project.scripts]
server = "app.server:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
