[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_eng"
version = "1.0.0"
description = "Automated Data Engineering QA"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic",
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
